<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Discount It</string>
    <string name="action_settings">Settings</string>
    <string name="itemPrice">Item Price:  $</string>
    <string name="discount">Discount:  %</string>
    <string name="percentSign">%</string>
    <string name="dollarSign">$</string>
    <string name="savedAmount">You Saved:</string>
    <string name="tax">Tax (optional):  %</string>
    <string name="finalPrice">Final Price:</string>
    <string name="calcButton">Discount It!</string>
    <string name="title_activity_receipt">Receipt</string>
    <string name="hello_world">Hello world!</string>

</resources>
