<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/itemPriceET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/itemPriceTV"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/itemPriceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/itemPriceET"
        android:layout_alignParentLeft="true"
        android:text="@string/itemPrice"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/discountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/itemPriceTV"
        android:layout_marginTop="24dp"
        android:text="@string/discount"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <TextView
        android:id="@+id/taxTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/discountTV"
        android:layout_marginTop="24dp"
        android:text="@string/tax"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/savedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/taxTV"
        android:layout_marginTop="24dp"
        android:text="@string/savedAmount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/finalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/savedTV"
        android:layout_marginTop="24dp"
        android:text="@string/finalPrice"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/discountET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/discountTV"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/discountTV"
        android:ems="10"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/taxET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/taxTV"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/taxTV"
        android:ems="10"
        android:inputType="numberDecimal" />
    
    <TextView
        android:id="@+id/savedPriceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/savedTV"
        android:layout_alignBottom="@+id/savedTV"
        android:layout_toRightOf="@+id/savedTV"
        android:paddingLeft="15dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/finalPriceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/finalTV"
        android:layout_toRightOf="@+id/finalTV"
        android:layout_alignBottom="@+id/finalTV"
        android:paddingLeft="15dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/finalTV"
        android:onClick="discount"
        android:text="@string/calcButton" />

</RelativeLayout>